# advent-of-code

./: .gitignore  Cargo.toml  README.md  deny.toml  rustfmt.toml
.github/workflows/: deny.yml  lint.yml  test.yml
src/: lib.rs
src/template/: input.part1.txt  mod.rs  part1.rs  part2.rs
src/utils/: cache.rs  map.rs  mod.rs  point.rs  rotate_matrix.rs  sorted_by_angle.rs
src/utils/cache/: sync.rs  unsync.rs
src/utils/iter_helpers/: mod.rs  skip_iter.rs
src/utils/point/: point2d.rs  point3d.rs
src/y2019/: mod.rs
src/y2019/star01/: mod.rs  part1.rs  part2.rs
src/y2019/star02/: mod.rs  part1.rs  part2.rs
src/y2019/star03/: mod.rs  part1.rs  part2.rs
src/y2019/star04/: mod.rs  part1.rs  part2.rs
src/y2019/star05/: mod.rs  part1.rs  part2.rs
src/y2019/star06/: mod.rs  part1.rs  part2.rs
src/y2019/star07/: mod.rs  part1.rs  part2.rs
src/y2019/star08/: mod.rs  part1.rs  part2.rs
src/y2019/star09/: mod.rs  part1.rs  part2.rs
src/y2019/star1/: part1.rs  part2.rs
src/y2019/star10/: mod.rs  part1.rs  part2.rs
src/y2019/star11/: mod.rs  part1.rs  part2.rs
src/y2019/star12/: mod.rs  part1.rs  part2.rs
src/y2019/star18/: common.rs  input.part2.txt  mod.rs  part1.rs  part2.rs
src/y2019/star2/: mod.rs
src/y2019/star22/: mod.rs  part1.rs  part2.rs  part2_v2.rs  part2_v3.rs
src/y2019/star3/: mod.rs  part1.rs  part2.rs
src/y2019/star4/: mod.rs  part2.rs
src/y2019/star5/: mod.rs  part2.rs
src/y2019/star7/: part1.rs
src/y2020/: mod.rs
src/y2021/: mod.rs
src/y2022/: mod.rs
src/y2023/: mod.rs
src/y2024/: mod.rs
src/y2025/: mod.rs
(+346 files in other folders)
