[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Tomas Drtina <tm.drtina@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
itertools = "0.10.1"
pathfinding = "3.0.5"
regex = "1.5.4"

[profile.test]
opt-level = 2
