[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Tomas Drtina <tm.drtina@gmail.com>"]
edition = "2021"

[dependencies]
itertools = "0.10.1"
num = "0.4.0"
once_cell = "1.16.0"
pathfinding = "3.0.5"
rayon = "1.5.3"
regex = "1.5.4"

[profile.test]
opt-level = 2

[features]
default = []
ignore-sanity = [] # Runs not only the first test for each part (first test should be the main, not sanity)
